Issue: fix z-index for massupdate wrap on issue list

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4888,6 +4888,7 @@ label.issue-item-row {
         border-bottom:1px solid rgba(0, 0, 0, 0.1);
         width:100%;
         background: #fff;
+        z-index: 900;
     }
 }
 
